--- a/app/views/places/test.html.erb
+++ b/app/views/places/test.html.erb
@@ -1,5 +1,4 @@
-<html>
-  <head>
+
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
     <!-- style of map, to be put in /stylesheets --> 
@@ -29,20 +28,40 @@
     <!-- to be called for loading on demand if wanted-->
     <!-- to load lang and lat -->
     <script type="text/javascript">
+      // function initialize() {
+      //   var mapOptions = {
+      //     // center: {lat: -33.924868, lng: 18.424055}, 
+      //     center: {lng: <%=@place.longitude%>, lat: <%=@place.latitude%>},
+      //     zoom: 8
+      //   };
+      //   var map = new google.maps.Map(document.getElementById("map-canvas"),
+      //       mapOptions);
+      // }
+      // google.maps.event.addDomListener(window, 'load', initialize);
+
+      // function loadScript() {
+      //   var script = document.createElement('script');
+      //   script.type = 'text/javascript';
+      //   script.src = 'https://maps.googleapis.com/maps/api/js?v=3.exp&' +
+      //       'callback=initialize';
+      //   document.body.appendChild(script);
+      // }
+
+      // window.onload = loadScript;
       var directionsDisplay;
       var directionsService = new google.maps.DirectionsService();
       var map;
 
       // var origin = new google.maps.LatLng(-33.924868, 18.424055);
-      // var destination = new google.maps.LatLng(-33.924868, 19.424055);
-      var origin = new google.maps.LatLng(<%= @user.latitude %>, <%=@user.longitude%>);
-      var destination = new google.maps.LatLng(<%=@place.latitude%>, <%=@place.longitude%>);
+      // var dest = new google.maps.LatLng(-33.924868, 19.424055);
+      var origin = new google.maps.LatLng(-33.9166700,18.4166700)
+      var dest = new google.maps.LatLng(-33.9166700,18.4166700)
 
       function initialize() {
 
         directionsDisplay = new google.maps.DirectionsRenderer();
         var mapOptions = {
-          zoom: 14,\
+          zoom: 14,
           center: origin
         }
         map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
@@ -54,7 +73,7 @@
         //var selectedMode = document.getElementById('mode').value;
         var request = {
             origin: origin,
-            destination: destination,
+            destination: dest,
             // Note that Javascript allows us to access the constant
             // using square brackets and a string value as its
             // "property."
@@ -63,31 +82,20 @@
         };
         directionsService.route(request, function(response, status) {
           if (status == google.maps.DirectionsStatus.OK) {
-            alert("Loading!")
             directionsDisplay.setDirections(response);
           }
           else {
-            puts status
-            puts response
-            alert("Error: Something went wrong with the locations");
+            console.log(respone);
+            console.log(status);
+            alert("something went wrong with locating your dest");
           }
         });
       }
 
-      alert("here")
+
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>  
 
-    <div id="panel">
-    <b>Mode of Travel: </b>
-    <select id="mode" onchange="calcRoute();">
-      <option value="DRIVING">Driving</option>
-      <option value="WALKING">Walking</option>
-      <option value="BICYCLING">Bicycling</option>
-      <option value="TRANSIT">Transit</option>
-    </select>
-    </div>
-  </head>
 
 
   <body>
@@ -102,90 +110,34 @@
 
 
 
-  <div class="container-main">
-      <div class="loc">
-        <p>
-        Your current location is 
-        <%= @user.curloc %>
-        <%= link_to "(Wrong?)", root_path %>
-        </p>
-      </div>
-
-     <p>Your reccomended place to go: <%= @place.loc %>, <%= @place.address %></p>
-      
-
-    <div class="container-filter .col-xs-12 .col-sm-6 .col-md-8">
-        <div class="col-md-2 col-sm-2 col-xs-2">
-           <p>Find me a place to :</p>
-        </div>
-        <div class="col-md-2 col-sm-2 col-xs-2">
-         <%= link_to "Feed me!", "FeedMe", :class => "btn btn-primary",:method => "put"%> <br>
-         </div>
-         <div class="col-md-2 col-sm-2 col-xs-2">
-         <%= link_to "Grab a drink!", "Drink", :class => "btn btn-primary",:method => "put" %><br>
-         </div>
-         <div class="col-md-2 col-sm-2 col-xs-2">
-         <%= link_to "Shop!", "Shop", :class => "btn btn-primary",:method => "put" %><br>
-         </div>
-         <div class="col-md-2 col-sm-2 col-xs-2">
-         <%= link_to "See or do!", "SeeDo", :class => "btn btn-primary",:method => "put" %><br>
-         </div>
-         <div class="col-md-2 col-sm-2 col-xs-2">
-         <%= link_to "Anything!!", "All",:class => "btn btn-primary", :method => "put" %><br>
-         </div>
+<div class="container-main">
+    <div class="loc">
+      <p>
+      Your current location is 
+      <%= @user.curloc %>
+      <%= link_to "(Wrong?)", root_path %>
+      </p>
     </div>
 
 
+ 
 
+    <div id="map-canvas" class = ".col-xs-12 .col-sm-6 .col-md-8"> </div>
 
-
-  <!-- 
-      <hr>
-          <div id="panel">
-          <b>Mode of Travel: </b>
-          <select id="mode">
-            <option value="DRIVING">Driving</option>
-            <option value="WALKING">Walking</option>
-            <option value="BICYCLING">Bicycling</option>
-            <option value="TRANSIT">Transit</option>
-          </select>
-          </div>
-   -->
-
-
-
-    <div id="map-canvas" class = ".col-xs-12 .col-sm-6 .col-md-8" onload="calcRoutes()"> </div>
-
-
-
-      <div class="container-btn .col-xs-12 .col-sm-6 .col-md-8">
-        <div class="col-md-3 col-sm-2 col-xs-2">
-          <%= link_to "I hate this place", 'places/button_no', :class => "btn btn-primary", :method => "put" %> <br>
-        </div>
-        <div class="col-md-3 col-sm-2 col-xs-2"> 
-          <%= link_to "Looks pretty alright~", "places/button_yes", :class => "btn btn-primary", :method => "put" %> <br>
-        </div>
-        <div class="col-md-3 col-sm-2 col-xs-2">
-          <%= link_to "Find me "+"somewhere like this!", "places/button_random", :class => "btn btn-primary", :method => "put"%> <br>
-        </div>
-        <div class="col-md-3 col-sm-2 col-xs-2">
-          <%= link_to "Restart algorithm", "places/reset", :class => "btn btn-primary", :method => "put"%> <br>
-        </div>
+    <div class="container-btn .col-xs-12 .col-sm-6 .col-md-8">
+      <div class="col-md-3 col-sm-2 col-xs-2">
+        <%= link_to "I hate this place", 'places/button_no', :class => "btn btn-primary", :method => "put" %> <br>
       </div>
-
+      <div class="col-md-3 col-sm-2 col-xs-2"> 
+        <%= link_to "Looks pretty alright~", "places/button_yes", :class => "btn btn-primary", :method => "put" %> <br>
+      </div>
+      <div class="col-md-3 col-sm-2 col-xs-2">
+        <%= link_to "Find me "+"somewhere like this!", "places/button_random", :class => "btn btn-primary", :method => "put"%> <br>
+      </div>
+      <div class="col-md-3 col-sm-2 col-xs-2">
+        <%= link_to "Restart algorithm", "places/reset", :class => "btn btn-primary", :method => "put"%> <br>
+      </div>
     </div>
 
-      <!-- sidebar? -->
-    <ul class=".col-xs-3 .col-md-2 sidebar">
-      <li class="list-group-item">Title</li>
-      <li class="list-group-item"> <%= @place.loc %></li>
-      <li class="list-group-item"> <%= image_tag @place.img %> </li>
-      <li class="list-group-item">Description</li>
-      <li class="list-group-item"> <%= link_to @place.url, @place.url, :target => "_blank" %></li>
-    </ul>
-  </body>
-
-</html>
-
-
+</div>
 
